--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJLxqA4JUgeaubZbbP_g3fG1v6iLFDqmA"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJLxqA4JUgeaubZbbP_g3fG1v6iLFDqmA"></script> -->
+    <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDJLxqA4JUgeaubZbbP_g3fG1v6iLFDqmA&loading=async&callback=initMap">
+    </script>
+    <!-- <script>
+        (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })({
+            v: "weekly",
+            key: "AIzaSyDJLxqA4JUgeaubZbbP_g3fG1v6iLFDqmA"
+        });
+    </script> -->
     <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBTqdjDrasq7og7KvaXLVW0Yf9hReSWvhY"></script> -->
     <!-- <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBuRkQ6tiYfGTML8yTMDiYJvhD4BKTU50I"></script> -->
 </head>
